--- a/new1.html
+++ b/new1.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h1>tuhoc.cc</h1>
-    <h2>sửa lần 1</h2>
+    <h1>new1</h1>
   </body>
 </html>
